added media query styles for bigger screen

--- a/index.html
+++ b/index.html
@@ -21,15 +21,17 @@
   </head>
   <body>
     <section class="container">
-      <h1 class="main-text">
-        <span class="main-text-first">Reliable, efficient delivery</span>
-        <span class="main-text-second">Powered by Technology</span>
-      </h1>
+      <div class="main-text-container">
+        <h1 class="main-text">
+          <span class="main-text-first">Reliable, efficient delivery</span>
+          <span class="main-text-second">Powered by Technology</span>
+        </h1>
 
-      <p class="sub-text">
-        Our Artificial Intelligence powered tools use millions of project data
-        points to ensure that your project is successful
-      </p>
+        <p class="sub-text">
+          Our Artificial Intelligence powered tools use millions of project data
+          points to ensure that your project is successful
+        </p>
+      </div>
 
       <div class="cards-container">
         <div class="card" id="supervisor">
